--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,4 @@
 kotlin.code.style=official
 kotlin.js.compiler=legacy
-org.gradle.debug=true
-
-#dukat.mode=source
+#org.gradle.debug=true
+dukat.mode=binary
